syntax = "proto3";

package examples;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common/errors.proto";

option python_generic_services = true;

// ItemService provides CRUD operations for items
service ItemService {
  // Unary RPCs
  rpc GetItem(GetItemRequest) returns (Item);
  rpc CreateItem(CreateItemRequest) returns (Item);
  rpc UpdateItem(UpdateItemRequest) returns (Item);
  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty);
  
  // Server streaming - list items with pagination
  rpc ListItems(ListItemsRequest) returns (stream Item);
  
  // Client streaming - batch create items
  rpc BatchCreateItems(stream CreateItemRequest) returns (BatchCreateResponse);
  
  // Bidirectional streaming - sync items
  rpc SyncItems(stream ItemSyncRequest) returns (stream ItemSyncResponse);
}

// Item represents a domain item entity
message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  string sku = 4;
  int32 quantity = 5;
  double price = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// GetItemRequest is the request to get a single item
message GetItemRequest {
  string id = 1;
}

// CreateItemRequest is the request to create a new item
message CreateItemRequest {
  string name = 1;
  string description = 2;
  string sku = 3;
  int32 quantity = 4;
  double price = 5;
}

// UpdateItemRequest is the request to update an existing item
message UpdateItemRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 quantity = 4;
  optional double price = 5;
  optional bool is_active = 6;
}

// DeleteItemRequest is the request to delete an item
message DeleteItemRequest {
  string id = 1;
}

// ListItemsRequest is the request to list items with pagination
message ListItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3;
  string order_by = 4;
}

// BatchCreateResponse is the response for batch item creation
message BatchCreateResponse {
  int32 created_count = 1;
  repeated string created_ids = 2;
  repeated common.ErrorDetail errors = 3;
}

// ItemSyncRequest is the request for bidirectional item sync
message ItemSyncRequest {
  oneof action {
    Item upsert = 1;
    string delete_id = 2;
  }
  string request_id = 3;
}

// ItemSyncResponse is the response for bidirectional item sync
message ItemSyncResponse {
  string id = 1;
  bool success = 2;
  common.ErrorDetail error = 3;
  string request_id = 4;
}
